--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -6,9 +6,22 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".LineActivity"
+            android:label="@string/title_activity_line">
+        </activity>
+        <activity
+            android:name=".TriangleActivity"
+            android:label="@string/title_activity_triangle">
+        </activity>
+        <activity
+            android:name=".RectActivity"
+            android:label="@string/title_activity_rect">
+        </activity>
+        <activity
+            android:name=".SampleListActivity"
+            android:label="@string/title_activity_sample_list">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
